# rgp2

aaf/: CMakeLists.txt  aa_aaf.h  aa_aaf.h~  aa_aafapprox.cpp  aa_aafarithm.cpp  aa_aafcommon.cpp  aa_aafcommon.cpp~  aa_aaftrigo.cpp  aaf.pro
ellipsoidAA/: CMakeLists.txt  ellipsoid.h  monomial.h  posynomial.h  rgp_base.cpp  rgp_base.h  rgp_prob1.cpp  rgp_prob1.h  rgp_test.cpp
rgp_yalaa/: CMakeLists.txt
